# spm_bazel

./: README.md  WORKSPACE  deps.bzl
.github/actions/build_and_test/: action.yml
.github/workflows/: ci.yml
Sources/SPMBazel/: AsyncMain.swift  AsyncParsableCommand.swift  BUILD.bazel  Generate.swift  SPMBazel.swift
integration_tests/: BUILD.bazel  no_cmd_test.sh
