load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("//build/swift:swift.bzl", "swift_binary")

bzlformat_pkg(name = "bzlformat")

swift_binary(
    name = "SPMBazel",
    module_name = "SPMBazel",
    visibility = ["//swift:__subpackages__"],
    deps = [
        "@apple_swift_argument_parser//:ArgumentParser",
    ],
)
